--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Daryna Lysenko",
   "license": "ISC",
   "dependencies": {
+    "swiper": "^11.2.10",
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.1.2"
   }
